--- a/views/includes/post-item.ejs
+++ b/views/includes/post-item.ejs
@@ -3,7 +3,7 @@
   <p class="post-item-author">By <%= post.author.name %></p>
   <p><%= post.summary %></p>
   <div class="post-actions">
-    <form action="/posts<%= post._id %>/delete" method="POST">
+    <form action="/posts/<%= post._id %>/delete" method="POST">
       <button class="btn btn-alt">Delete Post</button>
     </form>
     <a href="/posts/<%= post._id %>/edit">Edit Post</a>
